package org.pancakelab.model.order;

import org.pancakelab.model.pancakes.Pancake;

public class NullOrder extends Order {

    public NullOrder() {

        super(null);
    }

}
