package org.pancakelab.model.pancakes;

public class NullPancake extends Pancake{

    public NullPancake(){
        super(null);
    }
}
