@startuml
skinparam classAttributeIconSize 0

interface IOrderService {
  +Order createOrder(int building, int roomNumber)
  +boolean cancelOrder(UUID orderId)
  +boolean prepareOrder(UUID orderId)
  +Order deliverOrder(UUID orderId)
  +Set<UUID> listCompletedOrders()
  +Set<UUID> listPreparedOrders()
}

interface IPancakeService {
  +Map<Pancake, Integer> addPancakes(UUID orderId, Pancake pancake, int count)
  +Map<Pancake, Integer> removePancakes(UUID orderId, Pancake pancake, int count)
}

class Address {
  -int building
  -int room
}

class Order {
  -UUID id
  -Address address
  -Map<Pancake, Integer> pancakes
  +Order(Address address)
  +UUID getId()
  +Address getAddress()
  +Map<Pancake, Integer> getPancakes()
  +Map<Pancake, Integer> addPancakes(Pancake pancake, int count)
  +Map<Pancake, Integer> removePancakes(Pancake pancake, int count)
}

class NullOrder {
  +NullOrder()
}

class Pancake {
  -List<String> ingredients
  +Pancake(List<String> ingredients)
  +List<String> getIngredients()
  +String getDescription()
  +String getName(List<String> ingredients)
  -String capitalize(String word)
}

class NullPancake {
  +NullPancake()
}

class OrderBuilder {
  -Address address
  +OrderBuilder(Address address)
  +Order build()
}

class PancakeBuilder {
  -List<String> ingredients
  +PancakeBuilder(List<String> ingredients)
  +Pancake build()
  +static Set<String> getAllowedIngredients()
}

class OrderServiceImpl {
  +Order createOrder(int building, int roomNumber)
  +boolean cancelOrder(UUID orderId)
  +boolean prepareOrder(UUID orderId)
  +Order deliverOrder(UUID orderId)
  +Set<UUID> listCompletedOrders()
  +Set<UUID> listPreparedOrders()
  +Map<Pancake, Integer> addPancakes(UUID orderId, Pancake pancake, int count)
  +Map<Pancake, Integer> removePancakes(UUID orderId, Pancake pancake, int count)
  +Set<Order> listPreOrders()
  +Order findOrderById(UUID orderId)
}

IOrderService <|.. OrderServiceImpl
IPancakeService <|.. OrderServiceImpl

NullOrder --|> Order
NullPancake --|> Pancake

OrderBuilder --> Order
PancakeBuilder --> Pancake

Order --> Address
Order --> Pancake

OrderServiceImpl --> OrderBuilder
OrderServiceImpl --> PancakeBuilder

@enduml
